<resources>
    <string name="app_name">MissOurTrip</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="reset_password"><u>Reset Password?</u></string>
    <string name="signup">signup</string>
    <string name="already_registered_login_here"><u>Already registered? Login here</u></string>
    <string name="new_to_missourtrip_sign_up_with_a_new_password">New to MissOurTrip? Sign up with a new password!</string>
    <string name="new_to_missourtrip">New to MissOurTrip?</string>
    <string name="sign_up_with_a_new_password">Sign up with a new password</string>
    <string name="existing_password_reminder">You have already signed up before! Please login!</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="expenses">Expenses</string>
    <string name="add">add</string>
    <string name="export">Export</string>
    <string name="new_expense">New Expense</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="amount">Amount:</string>
    <string name="_0_0">0.0</string>
    <string name="split">split</string>
    <string name="save">save</string>
    <string name="category">Category:</string>
    <string name="splitting_bill">Splitting bill</string>
    <string name="total">Total:</string>
    <string name="me">Me</string>
    <string name="friend_1">Friend 1</string>
    <string name="add_participants">Add participants</string>
    <string name="categories">Categories</string>
    <string name="new_category">New Category</string>
    <string name="description">Description:</string>
    <string name="cancel">cancel</string>
    <string name="statistics">Statistics</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="base_currency">HKD: 1.00</string>
    <string name="usd">USD:</string>
    <string name="eur">EUR:</string>
    <string name="jpy">JPY:</string>
    <string name="gbp">GBP:</string>
    <string name="aud">AUD:</string>
    <string name="cad">CAD:</string>
    <string name="chf">CHF:</string>
    <string name="cny">CNY:</string>
    <string name="nzd">NZD:</string>
    <string name="last_updated">Last Updated</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="has_the_expense_settled">Has the expense settled?</string>
    <string name="settled">Settled</string>
    <string name="category_label">Category</string>
    <string name="total_expense_label">Total expense:</string>

</resources>